# rust-quaternions

./: .gitignore  Cargo.toml  LICENSE  README.md  build_python.sh
python/: build.sh  test_quaternion.py
src/: lib.rs  qndarray.rs  qnumpy.rs  qoperators.rs  quaternion.rs  quaternionerror.rs
