[package]
name="qrotate"
edition = "2021"
version = "0.2.0"
authors = [ "Steven Michael <ssmichael@gmail.com>"]
description = "Quaternion library for 3D rotation of vectors"
license = "Apache-2.0"
readme = "README.md"
categories = [ "science", "mathematics" ]
keywords = [ "vector", "rotation", "quaternion", "math", "ndarray"]
repository = "https://github.com/StevenSamirMichael/rust-quaternions"
homepage = "https://github.com/StevenSamirMichael/rust-quaternions"
docs = "https://docs.rs/qrotate/"


[lib]
name = "qrotate"

[dependencies]
num-traits = "0.2.15"
ndarray = {version="0.15.6", optional=true}
numpy = {version = "0.18.0", optional=true}
pyo3 = {version="0.18.1", features=["extension-module"], optional=true}

[dev-dependencies]
# for tests
rand = "0.8.5"

[features]
default = ["ndarray"]
ndarray = ["dep:ndarray"]
python = ["dep:ndarray", "dep:numpy", "dep:pyo3"]

[package.metadata.docs.rs]
# Enable all the features when building the docs on docs.rs
all-features = true
